# PanGu-Service

./: .gitignore  README.md
Plugins/plugin_base/: CMakeLists.txt
Plugins/plugin_base/include/: plugin_base.h
Plugins/plugin_base/src/: plugin_base.cpp
Service/: CMakeLists.txt
Service/include/: PanGuService.h
Service/include/ServiceModule/: PluginUtils.h  ServiceLocalRpc.h  ServiceUtils.h
Service/protos/: gen.bat  pangu_service_rpc.grpc.pb.cc  pangu_service_rpc.grpc.pb.h  pangu_service_rpc.pb.cc  pangu_service_rpc.pb.h  pangu_service_rpc.proto
Service/src/: PanGuService.cpp  main.cpp  service_base.cpp  service_installer.cpp
Service/src/ServiceModule/: PluginUtils.cpp  ServiceLocalRpc.cpp  ServiceUtils.cpp
Service/src/ServiceModule/ServiceUtils/: BaseTools.cpp  NetWorkUtils.cpp  SecTools.cpp
